--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>HELLO WORLD</title>
+        <title>My Website</title>
+        <meta charset="UTF-8">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+        <link rel="stylesheet" href="./Style.css">
+
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>HELLO</h1>
+        <nav>
+            <header>
+                <a href="/">1WeirdDev</a>
+            </header>
+        </nav>
     </body>
 </html>
