--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
             <header>
                 <a href="/">1WeirdDev</a>
             </header>
+            <div>
+                <a href="#AboutMe">About Me</a>
+            </div>
         </nav>
+
+        <div id="Content">
+            <div id="AboutMe">
+                <h1>Who am I?</h1>
+                <div>
+                    <p>
+                        I am a programmer and entrepreneur who has been coding for years,
+                        and I have experience doing all kinds of things such as game development, website development, OS development,
+                        and software development. I have experience in many programming languages such as HTML, Java, Javascript, CSS, C++, C, Python, and a few more.
+                        I am a hardworker willing to work on projects for you as long as I get some form of payment.
+                    </p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
